--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 os
+sys
 requests
 base64
 python-dotenv
@@ -7,7 +8,9 @@ numpy
 random
 tensorflow
 scikit-learn
+skopt
 shap
+matplotlib
 seaborn
 plotly
 warnings
